# rust-template

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: main.rs
tests/: tests.rs
